# player

./: .gitignore  Cargo.toml  README.md
frontend/: .gitignore  package-lock.json  package.json  packages.dhall  spago.dhall
frontend/src/: Instruction.purs  Main.js  Main.purs  PlayerState.purs  Remote.purs
frontend/static/: index.html  remote.html  remote.js
src/: app.rs  display.rs  error.rs  files.rs  lib.rs  loading.rs  main.rs  player.rs  remote.rs
src/display/: fns.rs
src/remote/: browse.rs  fns.rs  media.rs
style/: main.scss
